--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tldraw/tldraw": "^2.0.0-canary.512696c1ab2e",
+    "next": "latest",
+    "partykit": "^0.0.0-8848863",
+    "partysocket": "^0.0.0-8848863",
     "react": "latest",
     "react-dom": "latest",
-    "next": "latest"
+    "y-partykit": "^0.0.0-8848863",
+    "y-utility": "^0.1.3"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@types/react": "latest",
     "@types/node": "latest",
+    "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
     "postcss": "latest",
     "tailwindcss": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "latest"
+    "typescript": "latest"
   }
 }
