--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@tldraw/tldraw": "^2.0.0-canary.512696c1ab2e",
     "next": "13.4",
-    "partykit": "^0.0.0-8848863",
+    "partykit": "^0.0.30",
     "partysocket": "^0.0.0-8848863",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "y-partykit": "^0.0.0-683a3d3",
+    "y-partykit": "^0.0.9",
     "y-utility": "^0.1.3"
   },
   "devDependencies": {
