--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tldraw/tldraw": "^2.0.0-canary.512696c1ab2e",
+    "@tldraw/tldraw": "^2.0.0-alpha.17",
     "next": "13.4",
     "partykit": "^0.0.30",
     "partysocket": "^0.0.0-8848863",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "y-partykit": "^0.0.9",
-    "y-utility": "^0.1.3"
+    "y-utility": "^0.1.3",
+    "y-websocket": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "latest",
